# mcp-servers

./: README.md  clone_mcp_servers.sh  mcp_server_framework_critical_analysis.txt  mcp_server_integration_plan.md  mcp_servers_manifest.json
mcp_server_framework/: README.md  mcp_server_orchestrator.py  pyproject.toml
mcp_server_framework/core/communication/: __init__.py
mcp_server_framework/core/development/: __init__.py
mcp_server_framework/core/knowledge/: __init__.py
mcp_server_framework/utils/config/: __init__.py
servers/community/: cloned_repositories.txt
