[tool.poetry]
name = "mcp-server-framework"
version = "0.1.0"
description = "Modular Communication Protocol Server Framework"
authors = ["MCP Ecosystem Team"]

[tool.poetry.dependencies]
python = "^3.9"
# TODO: Add core dependencies
# Examples:
# pydantic = "^1.10.0"
# asyncio = "^3.4.3"
# langchain = "^0.0.x"

[tool.poetry.dev-dependencies]
# TODO: Add development dependencies
# Examples:
# pytest = "^6.2.5"
# mypy = "^0.910"
# black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-orchestrator = "mcp_server_orchestrator:main"
